# HERMES

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt
src/hermes/: cli.py  config.py  logging.py
src/hermes/api/: main.py  routes.py
src/hermes/chunking/: __init__.py  base.py  heuristic_chunker.py  js_chunker.py  python_chunker.py
src/hermes/embed/: biencoder.py  cache.py  crossencoder.py
src/hermes/eval/: dataset.py  metrics.py  run_eval.py
src/hermes/index/: build.py  faiss_index.py  metadata_store.py  sparse_index.py
src/hermes/ingest/: language_detect.py  repo_scanner.py
src/hermes/search/: fusion.py  pipeline.py  schemas.py
web/: package-lock.json  package.json
web/src/app/: layout.tsx  page.tsx
web/src/app/index-repo/: page.tsx
web/src/app/settings/: page.tsx
web/src/app/stats/: page.tsx
web/src/components/index/: index-guard.tsx  index-panel.tsx  welcome-screen.tsx
web/src/components/layout/: header.tsx  sidebar.tsx
web/src/components/search/: filters-panel.tsx  result-card.tsx  search-bar.tsx  timing-bar.tsx
web/src/components/stats/: stats-cards.tsx
